k8s/helm/minio-helm.yaml
---
# Source: minio/templates/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  labels:
    app: minio
    chart: minio-5.4.0
    release: minio
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
    release: minio
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
    chart: minio-5.4.0
    release: minio
    heritage: Helm
    monitoring: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: minio
---
# Source: minio/templates/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  labels:
    app: minio
    chart: minio-5.4.0
    release: minio
    heritage: Helm
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: minio
---
# Source: minio/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app: minio
    chart: minio-5.4.0
    release: minio
    heritage: Helm
spec:
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: "Parallel"
  serviceName: minio-svc
  replicas: 3
  selector:
    matchLabels:
      app: minio
      release: minio
  template:
    metadata:
      name: minio
      labels:
        app: minio
        release: minio
      annotations:
        checksum/secrets: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/config: 79b4353366c3f273af193f4f722cfc3382bb6ca6d9b9e2182edee5c78db98dcf
        instrumentation.opentelemetry.io/inject-go: opentelemetry-collector/default
        instrumentation.opentelemetry.io/otel-go-auto-target-exe: /usr/bin/minio
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      serviceAccountName: minio-sa
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2024-12-18T13-15-44Z
          imagePullPolicy: IfNotPresent
          command: [
            "/bin/sh",
            "-ce",
            "/usr/bin/docker-entrypoint.sh minio server http://minio-{0...2}.minio-svc.minio.svc/export -S /etc/minio/certs/ --address :9000 --console-address :9001"
          ]
          volumeMounts:
            - name: export
              mountPath: /export            
          ports:
            - name: http
              containerPort: 9000
            - name: http-console
              containerPort: 9001
          resources:
            requests:
              memory: 500Mi
          securityContext: 
            readOnlyRootFilesystem: false      
      volumes:
        - name: minio-user
          secret:
            secretName: minio        
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: export
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 32Gi
---
# Source: minio/templates/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  labels:
    app: minio
    chart: minio-5.4.0
    release: minio
    heritage: Helm
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port: 
                  number: 9001
      host: "minio-console.walnuts.dev"
---
# Source: minio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  labels:
    app: minio
    chart: minio-5.4.0
    release: minio
    heritage: Helm
  annotations:
    nginx.ingress.kubernetes.io/ignore-invalid-headers: "off"
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port: 
                  number: 9000
      host: "minio.walnuts.dev"
